@@ -5,10 +5,22 @@
 \title{Weights for distances}
 
 \description{
-Calculation of weights from a vector of distances, using a (decreasing) inverse exponential function.
+Calculation of weights from a vector of distances using a decreasing inverse exponential function.
+
+Let \eqn{d} be a vector of distances. 
+
+
+- Preliminary weights are calculated by \eqn{w = exp(-d / (h * mad(d)))} , where \eqn{h} is a scalar > 0 (scale factor).  
+
+- The weights of the distances higher than \eqn{median(d) + c * mad(d)}, where \eqn{c} is a scalar > 0 (used for removing outliers), are set to zero.  
+
+- Finally, the weights are "normalized" between 0 and 1 by \eqn{w = w / max(w)}.
+
+
+
 }
 
-\usage{wdist(d, h = 2, cri = 3)}
+\usage{wdist(d, h = 2, cri = 3, square = FALSE)}
 
 \arguments{
 
@@ -16,13 +28,12 @@ Calculation of weights from a vector of distances, using a (decreasing) inverse 
 
 \item{h}{A positive scalar (scaling factor). Lower is \eqn{h}, sharper is the function. See Details and the examples.}
 
-\item{cri}{A positive scalar used for defining outliers in the distances vector. See Details.}
+\item{cri}{A positive scalar used for defining outliers in the distances vector.}
+
+\item{square}{Logical. If \code{TRUE}, distances \eqn{d} are replaced by the squared distances, which corresponds to a Gaussian (RBF) kernel function. Default to \eqn{FALSE)}.}
 
 }
 
-\details{
-Let \eqn{d} be a vector of distances. Preliminary weights are calculated by \eqn{w = exp(-d / (h * mad(d)))}, where \eqn{h} is a scalar > 0 (scale factor). In addition, the weights of the distances higher than \eqn{median(d) + c * mad(d)}, where \eqn{c} is a scalar > 0, are set to zero.  Finally, the weights are "normalized" between 0 and 1 by \eqn{w = w / max(w)}.
-}
 
 \examples{
 
